<resources>
    <string name="app_name">IRAlarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Alarms</string>
    <string name="menu_assign">IR Tasks</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label_name">Name</string>
    <string name="label_time">Time</string>
    <string name="label_repeat">Repeat</string>
    <string name="button_edit_repeat">Edit Repeat</string>
    <string name="button_description_delete">Delete this item.</string>
    <string name="edit_time">Edit time</string>
    <string name="description_new_alarm">Add new item</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="description_alarm_name_edit">Alarm name</string>
    <string name="edit_name">Edit name</string>
    <string name="hint_alarm_name_edit">Input new alarm name</string>
    <string name="button_ok">OK</string>
    <string name="button_cansel">Cansel</string>
    <string name="delete_alarm_confirm">I will delete this item: %s.
    This operation can\'t rollback.</string>
    <string name="no_repeat">None.</string>
    <string name="label_task_list">Task List</string>
    <string name="label_ir_data">IR Data</string>
    <string name="hint_ir_data">Send data to control (HEX)</string>
    <string name="label_binary_data">Binary data</string>
    <string name="label_interval">Interval(sec)</string>
    <string name="hint_interval_edit">Interval after send</string>
    <string name="label_signal_format">IR Signal Format</string>
    <string name="hint_t_input">IR ON length(usec)</string>
    <string name="label_t">Tick length</string>
    <string name="hint_ir_name">IR Task Name</string>
    <string name="hint_button_save">Save this task</string>
    <string name="label_assign_schedules">Assigned Schedules</string>
    <string name="label_task">Tasks</string>
    <string name="description_delete_ir_task">Delete this task</string>
    <string name="description_edit_title">Edit this task</string>
    <string name="label_new_ir_task">New IR Task</string>
</resources>